<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.reports.TransactionsReportActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/brand_primary"
            app:navigationIcon="@drawable/ic_back"
            app:titleTextColor="@color/white" />

    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonFilter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/spacing_m"
        android:textColor="@color/white"
        app:iconTint="@color/white"
        app:backgroundTint="@color/brand_primary"
        app:layout_constraintTop_toBottomOf="@id/appBarLayout"
        tools:text="@string/report_filter_choose_date_range"
        tools:icon="@drawable/ic_calendar" />

    <LinearLayout
        android:id="@+id/totalsStrip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="@dimen/spacing_s"
        android:paddingBottom="@dimen/spacing_s"
        app:layout_constraintTop_toBottomOf="@id/buttonFilter">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:id="@+id/textTotalCredit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/credit_green"
                android:textStyle="bold"
                android:textSize="@dimen/text_size_title"
                tools:text="26,124" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/report_total_credit"
                android:textColor="@color/text_secondary"
                android:textSize="@dimen/text_size_small" />

        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="32dp"
            android:background="@color/divider" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:id="@+id/textTotalDebit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/debit_red"
                android:textStyle="bold"
                android:textSize="@dimen/text_size_title"
                tools:text="11,793" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/report_total_debit"
                android:textColor="@color/text_secondary"
                android:textSize="@dimen/text_size_small" />

        </LinearLayout>

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewTransactions"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:paddingBottom="@dimen/spacing_l"
        app:layout_constraintTop_toBottomOf="@id/totalsStrip"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:listitem="@layout/item_transaction_row" />

    <LinearLayout
        android:id="@+id/emptyStateContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_l"
        android:layout_marginEnd="@dimen/spacing_l"
        android:orientation="vertical"
        android:gravity="center"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/recyclerViewTransactions"
        app:layout_constraintBottom_toBottomOf="@id/recyclerViewTransactions">

        <ImageView
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:src="@drawable/ic_report"
            android:contentDescription="@null"
            app:tint="@color/badge_blue" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_m"
            android:gravity="center"
            android:text="@string/report_transactions_empty_message"
            android:textColor="@color/text_secondary" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
